# deds_proj_groep1

./: README.md  pyproject.toml
1_Data_Infrastructure/: import_ac_dataset.ipynb
2_Data_Warehouse/: BusinessEntity.ipynb  Customers.ipynb  Employee.ipynb  Orders.ipynb  PersonInfo.ipynb  Product.ipynb  Region.ipynb  TransactionHistory.ipynb  WorkOrder.ipynb  create_dwh_tables.sql  person.AddressInfo.ipynb  template_notebook.ipynb
2_Data_Warehouse/utils/: database_utils.py
3_ML_modeling/: cluster_model.db  product_frequent_itemset.ipynb  regression_model_quantity.ipynb  train_ml_models.ipynb  transaction_cluster_model.ipynb
4_Dashboard/: FrequentItemsets.ipynb  RegionClassificatieModel.ipynb
6_Data/: aenc.accdb  merged_customer_df.csv  merged_df_def.csv
6_Data/Denormalized data/: HumanResourcesSQL.txt  PersonSQL.txt  ProductionSQL.txt  PurchasingSQL.txt  SalesSQL.txt
db_utils/: db_utils.py
