[tool.poetry]
name = "deds-proj-groep1"
version = "0.1.0"
description = "Project repository voor het Data Engineering & Data Science project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyodbc = "^5.1.0"
loguru = "^0.7.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
